// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`create-a-github-issue checks the value of search_existing 1`] = `
{
  "assignees": [],
  "body": "Goodbye!",
  "labels": [],
  "milestone": undefined,
  "owner": "JasonEtco",
  "repo": "waddup",
  "title": "Hello!",
}
`;

exports[`create-a-github-issue checks the value of update_existing 1`] = `
{
  "assignees": [],
  "body": "Goodbye!",
  "labels": [],
  "milestone": undefined,
  "owner": "JasonEtco",
  "repo": "waddup",
  "title": "Hello!",
}
`;

exports[`create-a-github-issue creates a new issue 1`] = `
{
  "assignees": [],
  "body": "Goodbye!",
  "labels": [],
  "milestone": undefined,
  "owner": "JasonEtco",
  "repo": "waddup",
  "title": "Hello!",
}
`;

exports[`create-a-github-issue creates a new issue from a different template 1`] = `
{
  "assignees": [],
  "body": "Goodbye!",
  "labels": [],
  "milestone": undefined,
  "owner": "JasonEtco",
  "repo": "waddup",
  "title": "Different file",
}
`;

exports[`create-a-github-issue creates a new issue when updating existing issues is enabled but no issues with the same title exist 1`] = `
{
  "assignees": [],
  "body": "Goodbye!",
  "labels": [],
  "milestone": undefined,
  "owner": "JasonEtco",
  "repo": "waddup",
  "title": "Hello!",
}
`;

exports[`create-a-github-issue creates a new issue with a milestone passed by input 1`] = `
{
  "assignees": [],
  "body": "Goodbye!",
  "labels": [],
  "milestone": 1,
  "owner": "JasonEtco",
  "repo": "waddup",
  "title": "Hello!",
}
`;

exports[`create-a-github-issue creates a new issue with an assignee passed by input 1`] = `
{
  "assignees": [
    "octocat",
  ],
  "body": "Goodbye!",
  "labels": [],
  "milestone": undefined,
  "owner": "JasonEtco",
  "repo": "waddup",
  "title": "Hello!",
}
`;

exports[`create-a-github-issue creates a new issue with assignees and labels as comma-delimited strings 1`] = `
{
  "assignees": [
    "JasonEtco",
    "matchai",
  ],
  "body": "The action create-a-github-issue is the best action.",
  "labels": [
    "bug",
    "enhancement",
  ],
  "milestone": undefined,
  "owner": "JasonEtco",
  "repo": "waddup",
  "title": "DO EVERYTHING",
}
`;

exports[`create-a-github-issue creates a new issue with assignees, labels and a milestone 1`] = `
{
  "assignees": [
    "JasonEtco",
  ],
  "body": "The action create-a-github-issue is the best action.",
  "labels": [
    "bugs",
    "foo",
  ],
  "milestone": 2,
  "owner": "JasonEtco",
  "repo": "waddup",
  "title": "DO EVERYTHING foo",
}
`;

exports[`create-a-github-issue creates a new issue with multiple assignees passed by input 1`] = `
{
  "assignees": [
    "octocat",
    "JasonEtco",
  ],
  "body": "Goodbye!",
  "labels": [],
  "milestone": undefined,
  "owner": "JasonEtco",
  "repo": "waddup",
  "title": "Hello!",
}
`;

exports[`create-a-github-issue creates a new issue with some template variables 1`] = `
{
  "assignees": [],
  "body": "The action create-a-github-issue is the best action.

Environment variable foo is great.
",
  "labels": [],
  "milestone": undefined,
  "owner": "JasonEtco",
  "repo": "waddup",
  "title": "Hello create-a-github-issue",
}
`;

exports[`create-a-github-issue creates a new issue with the context.repo template variables 1`] = `
{
  "assignees": [],
  "body": "Are you looking for results on our gh-pages branch?

Just click this link! https://JasonEtco.github.io/waddup/path/to/my/pageindex.html
",
  "labels": [],
  "milestone": undefined,
  "owner": "JasonEtco",
  "repo": "waddup",
  "title": "This Issue has a generalizable GitHub Pages Link",
}
`;

exports[`create-a-github-issue finds, but does not update an existing issue with the same title 1`] = `
{
  "assignees": [],
  "body": "Goodbye!",
  "labels": [],
  "milestone": undefined,
  "owner": "JasonEtco",
  "repo": "waddup",
  "title": "Hello!",
}
`;

exports[`create-a-github-issue updates an existing open issue with the same title 1`] = `
{
  "assignees": [],
  "body": "Goodbye!",
  "labels": [],
  "milestone": undefined,
  "owner": "JasonEtco",
  "repo": "waddup",
  "title": "Hello!",
}
`;
